--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,13 @@ code {
 
 }
 
+.dark-mode {
+  .timeline-hint,
+  .contact-hint {
+    color: white;
+  }
+}
+
 a {
   text-decoration: none;
 }
@@ -147,6 +154,11 @@ p, a, h1, h2, h3, h4, h5, label, button {
 
   .contact-details,
   .contact-links {
+    color: #0d1116;
+  }
+
+  .timeline-hint,
+  .contact-hint {
     color: #0d1116;
   }
 }
